--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,11 @@
 {
-    "builds": [
-      {
-        "src": "frontend/package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "frontend/build"
-        }
-      },
-      {
-        "src": "backend/package.json",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "backend/src/index.js"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "frontend/build/$1"
-      }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    { "src": "backend/api/server.js", "use": "@vercel/node" },
+    { "src": "frontend/package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "backend/api/server.js" },
+    { "src": "/(.*)", "dest": "/frontend/$1" }
+  ]
+}
