--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,11 +1,12 @@
 {
   "version": 2,
   "builds": [
-    { "src": "backend/api/server.js", "use": "@vercel/node" },
+    { "src": "backend/index.js", "use": "@vercel/node" },
     { "src": "frontend/package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "backend/api/server.js" },
+    { "src": "/api/(.*)", "dest": "backend/index.js" },
     { "src": "/(.*)", "dest": "/frontend/$1" }
   ]
+
 }
