--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,12 +1,11 @@
 {
   "version": 2,
   "builds": [
-    { "src": "backend/index.js", "use": "@vercel/node" },
-    { "src": "frontend/package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } }
+    { "src": "index.js", "use": "@vercel/node" }, 
+    { "src": "../frontend/package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } } 
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "backend/index.js" },
+    { "src": "/api/(.*)", "dest": "index.js" }, 
     { "src": "/(.*)", "dest": "/frontend/$1" }
   ]
-
 }
