--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,11 +1,9 @@
 {
   "version": 2,
   "builds": [
-    { "src": "index.js", "use": "@vercel/node" }, 
-    { "src": "../frontend/package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } } 
+    { "src": "index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "backend/index.js" },
-    { "src": "/api/(.*)", "dest": "/" }
+    { "src": "/api/(.*)", "dest": "index.js" }
   ]
 }
