--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -4,6 +4,6 @@
     { "src": "index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "index.js" }
+    { "src": "https://ethio-tourand-travell.vercel.app/(.*)", "dest": "index.js" }
   ]
 }
