--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
 PORT=4000
-DB="mongodb+srv://sammy:sammy1234@blogpost.ncufjzn.mongodb.net/ethioTourAndTravel?retrywrites=true&w=majority"
+DB=mongodb+srv://sammy:sammy1234@blogpost.ncufjzn.mongodb.net/ethioTourAndTravel?retrywrites=true&w=majority
