--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,11 +1,11 @@
 {
   "version": 2,
   "builds": [
-    { "src": "backend/index.js", "use": "@vercel/node" },
-    { "src": "frontend/package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } }
+    { "src": "../backend/index.js", "use": "@vercel/node" },
+    { "src": "../frontend/package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "backend/index.js" },
-    { "src": "/(.*)", "dest": "frontend/build/$1" }
+    { "src": "/api/(.*)", "dest": "../backend/index.js" },
+    { "src": "/(.*)", "dest": "../frontend/build/$1" }
   ]
 }
