--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -5,7 +5,7 @@
     { "src": "../frontend/package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/index.js" },
+    { "src": "/api(.*)", "dest": "/index.js" },
     { "src": "/(.*)", "dest": "../frontend/build/$1" }
   ]
 }
