--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -6,6 +6,7 @@
   ],
   "routes": [
     { "src": "/api(.*)", "dest": "/index.js" },
+    { "src": "/uploads/(.*)", "dest": "/server/uploads/$1" },
     { "src": "/(.*)", "dest": "../frontend/build/$1" }
   ]
 }
